--- a/index.html
+++ b/index.html
@@ -58,14 +58,18 @@
       <div class="container">
         <div class="big-col">
           <img
+            class="landing-img-1"
             src="assets/images/image-web-3-desktop.jpg"
             alt=""
-            width="750px"
-            height="300px"
+          />
+          <img
+            class="landing-img-2"
+            src="assets/images/image-web-3-mobile.jpg"
+            alt=""
           />
           <div class="text">
             <h1>The Bright Future of Web 3.0?</h1>
-            <div style="margin-top: 25px; margin-left: 25px">
+            <div class="text-w">
               <p>
                 We dive into the next evolution of the web that claims to put
                 the power of the platforms back into the hands of the people.
