--- a/index.html
+++ b/index.html
@@ -51,6 +51,12 @@
             <li>Trending</li>
             <li>Categories</li>
           </ul>
+
+          <div class="menu-icon">
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
         </nav>
       </div>
     </header>
