--- a/index.html
+++ b/index.html
@@ -51,13 +51,29 @@
             <li>Trending</li>
             <li>Categories</li>
           </ul>
-
-          <div class="menu-icon">
-            <span></span>
-            <span></span>
-            <span></span>
-          </div>
+            <div class="muo">
+          <a href="#"
+            ><img
+              src="./assets/images/icon-menu.svg"
+              alt=""
+              class="mobile-menu"
+          /></a>
+        </div>
         </nav>
+      </div>
+      <div class="overlay">
+        <div class="mobile-nav show">
+          <a href="#" id="exit">
+            <img src="./assets/images/icon-menu-close.svg" alt=""
+          /></a>
+          <div class="nav-content">
+            <li><a href="#">Home</a></li>
+            <li><a href="#">New</a></li>
+            <li><a href="#">Popular</a></li>
+            <li><a href="#">Trending</a></li>
+            <li><a href="#">Categrories</a></li>
+          </div>
+        </div>
       </div>
     </header>
     <div class="landing">
@@ -140,5 +156,6 @@
         >Frontend Mentor</a
       >. Coded by <a href="#">Your Name Here</a>.
     </div>
+    <script src="menu.js"></script>
   </body>
 </html>
