--- a/index.html
+++ b/index.html
@@ -51,14 +51,14 @@
             <li>Trending</li>
             <li>Categories</li>
           </ul>
-            <div class="muo">
-          <a href="#"
-            ><img
-              src="./assets/images/icon-menu.svg"
-              alt=""
-              class="mobile-menu"
-          /></a>
-        </div>
+          <div class="muo">
+            <a href="#"
+              ><img
+                src="./assets/images/icon-menu.svg"
+                alt=""
+                class="mobile-menu"
+            /></a>
+          </div>
         </nav>
       </div>
       <div class="overlay">
@@ -122,7 +122,7 @@
         </div>
       </div>
     </div>
-    <div class="container">
+    <div class="container" style="display: block">
       <div class="grid-holder">
         <div class="small-col">
           <img src="assets/images/image-retro-pcs.jpg" alt="" />
