--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <li>Categories</li>
           </ul>
           <div class="muo">
-            <a href="#"
+            <a href="#" class="m-nav"
               ><img
                 src="./assets/images/icon-menu.svg"
                 alt=""
