--- a/index.html
+++ b/index.html
@@ -36,14 +36,8 @@
   <body>
     <header>
       <div class="container">
+        <img src="assets/images/logo.svg" alt="" width="50px" height="30px" style="margin-top: 20px ;" />
         <nav>
-          <img
-            src="assets/images/logo.svg"
-            alt=""
-            width="50px"
-            height="30px
-        "
-          />
           <ul>
             <li>Home</li>
             <li>New</li>
